crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__F.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
package com.google.googlejavaformat.java.test;

/**
 * Tests for FieldAccesses, FieldDeclarations, and ForStatements.
 */
class F {
  int x;
  int x1 = 0;
  int y, z;
  int y1 = 0, z1 = 0;
  F f = null;
  Object field0 =
    true
      ? true ? true ? null : null : true ? null : null
      : true ? true ? null : null : true ? null : null;

  Pair<
    Pair<Pair<Integer, Integer>, Pair<Integer, Integer>>,
    Pair<Pair<Integer, Integer>, Pair<Integer, Integer>>
  > field1 = null;
  Pair<
    Pair<Pair<Integer, Integer>, Pair<Integer, Integer>>,
    Pair<Pair<Integer, Integer>, Pair<Integer, Integer>>
  > field2 =
    true
      ? true ? true ? null : null : true ? null : null
      : true ? true ? null : null : true ? null : null;

  @MarkerAnnotation
  Pair<
    Pair<Pair<Integer, Integer>, Pair<Integer, Integer>>,
    Pair<Pair<Integer, Integer>, Pair<Integer, Integer>>
  > field3 =
    true
      ? true ? true ? null : null : true ? null : null
      : true ? true ? null : null : true ? null : null;

  void f() {
    for (
      int i =
        0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0;
      i
        < 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 10;
      i++
    ) {
      f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.Ff = null;
    }
    for (
      int i =
        0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0;
      i
        < 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 10;
      i++
    ) {
      f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.f.Ff =
        null;
    }
  }
}
