crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__Fields.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class Fields {
  int a = 1;
  int b = 1;

  int c = 1;
  /**
   * Javadoc
   */
  int d = 1;

  int x = 1;

  int y = 1;
}
