crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__ForMany.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class ForMany {
  {
    A a;
    for (b = B; c != C; d = D) {
    }
  }
}
