crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__I.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
package com.google.googlejavaformat.java.test;

import java.util.List;

/**
 * Tests for IfStatements, ImportDeclarations, InfixExpressions, Initializers,
 * InstanceofExpressions, and IntersectionTypes.
 */
class I {
  interface I0 {
  }

  interface I1 {
  }

  interface I2 {
  }

  interface I3 {
  }

  interface I4 {
  }

  interface I5 {
  }

  interface I6 {
  }

  interface I7 {
  }

  interface I8 {
  }

  interface I9 {
  }

  interface I10 {
  }

  interface I11 {
  }

  interface I12 {
  }

  interface I13 {
  }

  interface I14 {
  }

  interface I15 {
  }

  interface I16 {
  }

  interface I17 {
  }

  interface I18 {
  }

  interface I19 {
  }

  class II<
    T extends I0
    & I1
    & I2
    & I3
    & I4
    & I5
    & I6
    & I7
    & I8
    & I9
    & I10
    & I11
    & I12
    & I13
    & I14
    & I15
    & I16
    & I17
    & I18
    & I19
  > {
  }

  static class CC {
    static {
      int i = 0;
    }
  }

  int x =
    0 >>> 0 + 0 / 0 * 0 - 0 & 0 << 0 * 0 / 0 >> 0 - 0
      ^ 0 * 0 / 0 >>> 0 << 0 * 0 - 0 / 0
      | 0 * 0 >> 0 + 0 / 0 * 0 - 0 << 0
        & 0 * 0 / 0 >>> 0 - 0 * 0 >> 0 / 0 << 0 * 0 + 0 - 0 / 0 * 0
      | 0 - 0 * 0 >>> 0 << 0 / 0 * 0 >> 0 - 0 ^ 0 * 0 / 0 & 0 << 0 + 0;

  void f() {
    if (
      0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        + 0
        == 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0 + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
          + 0
    ) {
    } else if (null instanceof List) {
    } else {
    }
    if (true) {
    }
  }
}
