crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__I1037.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
public sealed interface A {
  record AA(Long a) implements A {
  }

  static Long mySwitch(A a) {
    switch (a) {
      case AA(_) -> {
        return 1L;
      }
    }
  }
}
