crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__I1153.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class I1153 {
  void f() {
    //// (1) one
    int one;

    //// (2) two
    int two;

    //// (2.1) if we need to collect data using multiple different collectors, e.g. taxonomy and
    ////       ranges, or even two taxonomy facets that use different Category List Field, we can
    ////       use MultiCollectorManager, e.g.:
    // TODO: This should be (2.1) two point one
    int twoPointOne;
  }
}
