crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__I202.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class I202 {
  {
    //noinspection CheckResult
    methodWhoseResultShouldBeChecked();
  }
}
