crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__I365.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class I365 {
  {
    return foo____________.bar__________()
        .baz____________()
        .parallelStream()
        .map(Baz::getId)
        .collect(toList());
  }
}
