crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__I374.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target({ElementType.TYPE_USE, ElementType.TYPE_PARAMETER})
@interface MyTypeAnno {
}

public class GjfFailure {
  void m(int a @MyTypeAnno []) {
  }
}
