crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__google-java-format__input__I477.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class I477 {
  public static String foo(int in) {
    return switch (in) {
      case 1 -> "A";
      case 2 -> "B";
      default -> throw new IllegalStateException("Unknown input " + in);
    };
  }

  public static String foo(int in) {
    return switch (in) {
      case 1 -> "A";
      case 2 -> "B";
      default -> "C";
    };
  }
}
